# python-plantsim

./: .ruff.toml  pyproject.toml
plantsim/: attribute_explorer.py  pandas_table.py  plantsim.py  table.py
scripts/: install.sh
