[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plantsim"
version = "0.0.3"
description = """
Python wrapper for Plant Simulation
"""
authors = [{ name = "Tilo van Ekeris", email = "tilo@vanekeris.de" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
]

dependencies = ["pywin32", "texttable", "pandas"]

[project.optional-dependencies]
dev = ["ruff"]

[project.urls]
Homepage = "https://github.com/tmdt-buw/python-plantsim"
